--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,12 +2,12 @@
 # Backend
 # -----------------------
 
-PULSE_ENV=development
+PULSE_ENV=dev
 PULSE_API_PORT=8000
 
 # Internal Pulse DB
 PULSE_DB_HOST=localhost
-PULSE_DB_PORT=5432
+PULSE_DB_PORT=5433
 PULSE_DB_NAME=pulse
 PULSE_DB_USER=pulse_user
 PULSE_DB_PASSWORD=changeme
