--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,11 +6,7 @@ PULSE_ENV=dev
 PULSE_API_PORT=8000
 
 # Internal Pulse DB
-PULSE_DB_HOST=localhost
-PULSE_DB_PORT=5433
-PULSE_DB_NAME=pulse
-PULSE_DB_USER=pulse_user
-PULSE_DB_PASSWORD=changeme
+export PULSE_DATABASE_URL='postgresql://user:password@localhost:5432/db'
 
 # Security
 JWT_SECRET_KEY=changeme
